# akaze

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  test_akaze_programs.py
mex/: akaze.cpp
src/: CMakeLists.txt  akaze.cpp  akaze_compare.cpp  akaze_compare.h  akaze_features.cpp  akaze_features.h  akaze_match.cpp  akaze_match.h  cmdLine.h
src/lib/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  config.h  fed.cpp  fed.h  nldiffusion_functions.cpp  nldiffusion_functions.h  utils.cpp  utils.h
vlbenchmark/: AKAZE.m  README  RepeatabilityBenchmarkMod.m  test_detector_bikes_akaze.m
